changes title to 'Signal Chain Symbols'

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -102,7 +102,7 @@
     "showBackground": "Show background color picker",
     "toggleTheme": "Toggle theme",
     "personalLib": "Personal Library",
-    "excalidrawLib": "Excalidraw Library",
+    "excalidrawLib": "Signal Chain Symbols",
     "decreaseFontSize": "Decrease font size",
     "increaseFontSize": "Increase font size",
     "unbindText": "Unbind text",
